traces/bug_290.txt
src/fflib/glumesh2D.cpp:280: error: DEAD_STORE
  The value written to &l1 (type int) is never used.
Showing all 1 steps of the trace


src/fflib/glumesh2D.cpp:280:2: Write of unused value
278.       for(int i=0;i<neb;++i)
279.         {
280.   	int l0,l1=ChangeLab(mape,l0=m->bedges[i].lab) ;
        ^
281.   	 nebn++;
282.         }
